--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -450,7 +450,10 @@
         "productOptions": {
           "label": "Product options",
           "hint": "Define the options for the product, e.g. color, size, etc."
-        }
+        },
+        "defaultOption": "Default option",
+        "defaultVariant": "Default variant",
+        "defaultOptionValue": "Default option value"
       },
       "successToast": "Product {{title}} was successfully created."
     },
@@ -2284,6 +2287,81 @@
       }
     }
   },
+  "dashboard": {
+    "domain": "Dashboard",
+    "welcome":"Welcome to Vendor Panel",
+    "pleaseCompleteSteps":"Please complete these steps so you can start selling on the marketplace",
+    "completeInformation":"Complete the store information",
+    "setupLocationsShipping":"Setup Locations & Shipping",
+    "addProductsStartSelling":"Add products and start selling",
+    "manage":"Manage",
+    "setup":"Setup",
+    "add":"Add"
+  },
+  "stripeConnects": {
+    "domain": "Stripe Connects"
+  },
+  "reviews":{
+    "domain": "Reviews",
+    "manageYourReviews": " Manage your reviews",
+    "showTips": "Your reviews will show up here.",
+    "customer": "Customer",
+    "name": "Name",
+    "stars": "Stars",
+    "reply": "Reply",
+    "added": "Added",
+    "order": "Order",
+    "editReply": "Edit Reply",
+    "editYourReplyToCustomer": "Edit your reply to customer review.",
+    "replyToCustomerReview": "Reply to customer review.",
+    "comment": "Comment",
+    "deleteReply": "Delete reply",
+    "save": "Save",
+    "loading": "Loading",
+    "reviews": "reviews",
+    "theReviewCommentIsNotTrue": "The review comment is not true",
+    "theReviewCommentIsInsulting": "The review comment is insulting",
+    "theReviewCommentIsOffensive": "The review comment is offensive or vulgar",
+    "other": "Other",
+    "requestIsUpdated": "Request is updated",
+    "pleaseWaitForAResponse": "Please wait for a response from the moderator.",
+    "editRequest": "Edit Request",
+    "reportReview": "Report Review",
+    "editTheRequestToReport": "Edit the request to report the review from customer.",
+    "reportReviewFromCustomer": "Report review from customer.",
+    "updateRequest": "Update Request",
+    "replyBeenDeleted":"Reply has been deleted",
+    "replyBeenSend":"Reply has been sent",
+    "pleaseSelectReason":"Please select a reason",
+    "reviewIsReported":"Review is reported",
+    "pleaseWaitModerator":"Please wait for a response from the moderator.",
+    "reasons":"Reason"
+  },
+  "requests": {
+    "domain": "Requests",
+    "checkStatus":"Check the status of your requests and add new ones",
+    "collectionsRequests":"Collections requests",
+    "requestsCollections":"Request Collections",
+    "categoriesRequests":"Categories requests",
+    "requestsCategories":"Request Category",
+    "reviewsRequests":"Reviews requests",
+    "requestsReviews":"Reviews Removal Requests",
+    "ordersRequests":"Orders requests",
+    "requestsOrders":"Orders Cancellation Requests",
+    "addCollection":"Your requests to add a new collection",
+    "addCategories":"Your requests to add a new category",
+    "cancelOrder":"Your requests to cancel an order",
+    "cancelReview":" Your requests to cancel a review",
+    "title": "Title",
+    "handle": "Handle",
+    "date": "Date",
+    "status": "Status",
+    "review": "Review",
+    "reason": "Reason",
+    "order": "Order",
+    "customer": "Customer",
+    "customerEmail": "Customer Email"
+  },
   "profile": {
     "domain": "Profile",
     "manageYourProfileDetails": "Manage your profile details.",
@@ -2831,6 +2909,7 @@
     "inventoryItem": "Inventory item",
     "requiredQuantity": "Required quantity",
     "description": "Description",
+    "image": "Image",
     "email": "Email",
     "password": "Password",
     "repeatPassword": "Repeat Password",
