feat(产品创建): 添加属性表单并增强表单验证
- 新增产品创建属性表单组件
- 在表单流程中添加属性标签页
- 加强尺寸和重量等字段的必填验证
- 更新多语言翻译支持属性标签
- 优化表单标签页切换时的字段验证逻辑

--- a/src/i18n/translations/$schema.json
+++ b/src/i18n/translations/$schema.json
@@ -1697,6 +1697,9 @@
                 "organize": {
                   "type": "string"
                 },
+                "attributes": {
+                  "type": "string"
+                },
                 "variants": {
                   "type": "string"
                 },
