--- a/src/i18n/translations/zhCN.json
+++ b/src/i18n/translations/zhCN.json
@@ -415,12 +415,13 @@
       "description": "创建新产品。",
       "header": "常规",
       "tabs": {
-        "details": "基础",
-        "organize": "组织",
-        "variants": "变体",
-        "inventory": "库存套件",
-        "richText": "详情"
-      },
+      "details": "基础",
+      "organize": "组织",
+      "variants": "变体",
+      "inventory": "库存套件",
+      "attributes": "属性",
+      "richText": "详情"
+    },
       "errors": {
         "variants": "请至少选择一个变体。",
         "options": "请至少创建一个选项。",
