feat(i18n): 添加MID和HS代码的提示信息并更新尺寸单位
- 在翻译文件中添加midCodeTooltip和hsCodeTooltip字段
- 为所有尺寸和重量字段添加单位(mm/g)
- 在表单组件中添加工具提示功能
- 更新产品变体表单的尺寸和重量验证逻辑

--- a/src/i18n/translations/$schema.json
+++ b/src/i18n/translations/$schema.json
@@ -12397,6 +12397,12 @@
         "hsCode": {
           "type": "string"
         },
+        "midCodeTooltip": {
+          "type": "string"
+        },
+        "hsCodeTooltip": {
+          "type": "string"
+        },
         "ean": {
           "type": "string"
         },
