产品 描述 限制 150 字

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -425,6 +425,7 @@
     "edit": {
       "header": "تحرير المنتج",
       "description": "تحرير تفاصيل المنتج.",
+      "subtitlePlaceholder": "اختياري، أقصى عدد 150 حرف",
       "successToast": "تم تحديث المنتج {{title}} بنجاح."
     },
     "create": {
