--- a/src/i18n/translations/bg.json
+++ b/src/i18n/translations/bg.json
@@ -407,6 +407,7 @@
     "edit": {
       "header": "Редактиране на продукт",
       "description": "Редактирайте детайлите на продукта.",
+      "subtitlePlaceholder": "По избор, максимум 150 знака",
       "successToast": "Продуктът {{title}} беше успешно актуализиран."
     },
     "create": {
