--- a/src/i18n/translations/el.json
+++ b/src/i18n/translations/el.json
@@ -407,6 +407,7 @@
     "edit": {
       "header": "Επεξεργασία προϊόντος",
       "description": "Επεξεργαστείτε τις λεπτομέρειες του προϊόντος.",
+      "subtitlePlaceholder": 	"Προαιρετικό, μέγιστο 150 χαρακτήρες",
       "successToast": "Το προϊόν {{title}} ενημερώθηκε με επιτυχία."
     },
     "create": {
