--- a/src/i18n/translations/mk.json
+++ b/src/i18n/translations/mk.json
@@ -407,6 +407,7 @@
     "edit": {
       "header": "Уреди производ",
       "description": "Уредете ги деталите за производот.",
+      "subtitlePlaceholder": 	"По избор, максимум 150 знаци",
       "successToast": "Производ {{title}} беше успешно ажуриран."
     },
     "create": {
