--- a/src/i18n/translations/mn.json
+++ b/src/i18n/translations/mn.json
@@ -407,6 +407,7 @@
     "edit": {
       "header": "Бүтээгдэхүүнийг засах",
       "description": "Бүтээгдэхүүний дэлгэрэнгүй мэдээллийг засах.",
+      "subtitlePlaceholder":"Сонголтвол, хамгийн ихдээ 150 тэмдэгт",
       "successToast": "Бүтээгдэхүүн {{title}} амжилттай шинэчлэгдлээ."
     },
     "create": {
