--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -407,6 +407,7 @@
     "edit": {
       "header": "Редактировать товар",
       "description": "Редактировать детали товара.",
+      "subtitlePlaceholder":"Необязательно, макс. 150 символов",
       "successToast": "Товар {{title}} был успешно обновлен."
     },
     "create": {
