--- a/src/i18n/translations/$schema.json
+++ b/src/i18n/translations/$schema.json
@@ -1665,6 +1665,9 @@
             "description": {
               "type": "string"
             },
+            "subtitlePlaceholder": {
+              "type": "string"
+            },
             "successToast": {
               "type": "string"
             }
