feat(product): 允许用户最多添加3个选项

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -467,7 +467,8 @@
         },
         "productOptions": {
           "label": "خيارات المنتج",
-          "hint": "حدد الخيارات للمنتج، مثل اللون، الحجم، إلخ."
+          "hint": "حدد الخيارات للمنتج، مثل اللون، الحجم، إلخ.",
+          "maxOptionsReached": "يمكنك إضافة أقصى 3 خيارات"
         }
       },
       "successToast": "تم إنشاء المنتج {{title}} بنجاح."
