--- a/src/i18n/translations/bg.json
+++ b/src/i18n/translations/bg.json
@@ -449,7 +449,8 @@
         },
         "productOptions": {
           "label": "Опции на продукта",
-          "hint": "Определете опциите за продукта, напр. цвят, размер и др."
+          "hint": "Определете опциите за продукта, напр. цвят, размер и др.",
+          "maxOptionsReached": "Можете да добавите максимум 3 опции"
         }
       },
       "successToast": "Продуктът {{title}} беше успешно създаден."
