--- a/src/i18n/translations/cs.json
+++ b/src/i18n/translations/cs.json
@@ -444,7 +444,8 @@
         },
         "productOptions": {
           "label": "Možnosti produktů",
-          "hint": "Definujte možnosti pro produkt, např. barvu, velikost atd."
+          "hint": "Definujte možnosti pro produkt, např. barvu, velikost atd.",
+          "maxOptionsReached": "Můžete přidat maximálně 3 možnosti"
         }
       },
       "successToast": "Produkt {{title}} byl úspěšně vytvořen."
