--- a/src/i18n/translations/el.json
+++ b/src/i18n/translations/el.json
@@ -407,7 +407,7 @@
     "edit": {
       "header": "Επεξεργασία προϊόντος",
       "description": "Επεξεργαστείτε τις λεπτομέρειες του προϊόντος.",
-      "subtitlePlaceholder": 	"Προαιρετικό, μέγιστο 150 χαρακτήρες",
+      "subtitlePlaceholder": "Προαιρετικό, μέγιστο 150 χαρακτήρες",
       "successToast": "Το προϊόν {{title}} ενημερώθηκε με επιτυχία."
     },
     "create": {
@@ -449,7 +449,8 @@
         },
         "productOptions": {
           "label": "Επιλογές προϊόντων",
-          "hint": "Ορίστε τις επιλογές για το προϊόν, π.χ. χρώμα, μέγεθος κ.λπ."
+          "hint": "Ορίστε τις επιλογές για το προϊόν, π.χ. χρώμα, μέγεθος κ.λπ.",
+          "maxOptionsReached": "Μπορείτε να προσθέσετε μέχρι 3 επιλογές"
         }
       },
       "successToast": "Το προϊόν {{title}} δημιουργήθηκε με επιτυχία."
