--- a/src/i18n/translations/fa.json
+++ b/src/i18n/translations/fa.json
@@ -407,7 +407,7 @@
     "edit": {
       "header": "ویرایش محصول",
       "description": "جزئیات محصول را ویرایش کنید.",
-      
+
       "successToast": "محصول {{title}} با موفقیت به‌روزرسانی شد."
     },
     "create": {
@@ -449,7 +449,8 @@
         },
         "productOptions": {
           "label": "گزینه‌های محصول",
-          "hint": "گزینه‌های محصول مانند رنگ، اندازه و غیره را تعریف کنید."
+          "hint": "گزینه‌های محصول مانند رنگ، اندازه و غیره را تعریف کنید.",
+          "maxOptionsReached": "شما می‌توانید حداکثر 3 گزینه اضافه کنید"
         }
       },
       "successToast": "محصول {{title}} با موفقیت ایجاد شد."
