--- a/src/i18n/translations/ja.json
+++ b/src/i18n/translations/ja.json
@@ -439,7 +439,8 @@
         },
         "productOptions": {
           "label": "商品オプション",
-          "hint": "色、サイズなど、商品のオプションを定義します。"
+          "hint": "色、サイズなど、商品のオプションを定義します。",
+          "maxOptionsReached": "最大3つの商品オプションを追加できます"
         }
       },
       "successToast": "商品「{{title}}」が正常に作成されました。"
