--- a/src/i18n/translations/mn.json
+++ b/src/i18n/translations/mn.json
@@ -407,7 +407,7 @@
     "edit": {
       "header": "Бүтээгдэхүүнийг засах",
       "description": "Бүтээгдэхүүний дэлгэрэнгүй мэдээллийг засах.",
-      "subtitlePlaceholder":"Сонголтвол, хамгийн ихдээ 150 тэмдэгт",
+      "subtitlePlaceholder": "Сонголтвол, хамгийн ихдээ 150 тэмдэгт",
       "successToast": "Бүтээгдэхүүн {{title}} амжилттай шинэчлэгдлээ."
     },
     "create": {
@@ -449,7 +449,8 @@
         },
         "productOptions": {
           "label": "Бүтээгдэхүүний сонголтууд",
-          "hint": "Бүтээгдэхүүний сонголтуудыг, жишээ нь өнгө, хэмжээ гэх мэтийг тодорхойл."
+          "hint": "Бүтээгдэхүүний сонголтуудыг, жишээ нь өнгө, хэмжээ гэх мэтийг тодорхойл.",
+          "maxOptionsReached": "Та максимум 3 сонголт оруулах боломжтой"
         }
       },
       "successToast": "Бүтээгдэхүүн {{title}} амжилттай үүсгэгдлээ."
