--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -407,7 +407,7 @@
     "edit": {
       "header": "Редактировать товар",
       "description": "Редактировать детали товара.",
-      "subtitlePlaceholder":"Необязательно, макс. 150 символов",
+      "subtitlePlaceholder": "Необязательно, макс. 150 символов",
       "successToast": "Товар {{title}} был успешно обновлен."
     },
     "create": {
@@ -449,7 +449,8 @@
         },
         "productOptions": {
           "label": "Опции товара",
-          "hint": "Укажите опции для товара, например, цвет, размер и т.д."
+          "hint": "Укажите опции для товара, например, цвет, размер и т.д.",
+          "maxOptionsReached": "Вы можете добавить максимум 3 опции"
         }
       },
       "successToast": "Товар {{title}} был успешно создан."
