--- a/src/i18n/translations/th.json
+++ b/src/i18n/translations/th.json
@@ -396,7 +396,7 @@
     "edit": {
       "header": "แก้ไขสินค้า",
       "description": "แก้ไขรายละเอียดของสินค้า",
-      "subtitlePlaceholder":"ไม่บังคับ, สูงสุด 150 ตัวอักษร",
+      "subtitlePlaceholder": "ไม่บังคับ, สูงสุด 150 ตัวอักษร",
       "successToast": "สินค้า {{title}} ถูกอัปเดตสำเร็จ"
     },
     "create": {
@@ -438,7 +438,8 @@
         },
         "productOptions": {
           "label": "ตัวเลือกสินค้า",
-          "hint": "กำหนดตัวเลือกสำหรับสินค้า เช่น สี ขนาด เป็นต้น"
+          "hint": "กำหนดตัวเลือกสำหรับสินค้า เช่น สี ขนาด เป็นต้น",
+          "maxOptionsReached": "สามารถเพิ่มได้ไม่เกิน 3 ตัวเลือก"
         }
       },
       "successToast": "สินค้า {{title}} ถูกสร้างเรียบร้อยแล้ว"
