--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -263,9 +263,9 @@
       "docs": "User Guide"
     },
     "table": {
-      "jumpTo":"Jump to",
-      "confirm":"Confirm",
-      "page":"Page"
+      "jumpTo": "Jump to",
+      "confirm": "Confirm",
+      "page": "Page"
     }
   },
   "dataGrid": {
@@ -416,13 +416,13 @@
       "description": "Create a new product.",
       "header": "General",
       "tabs": {
-      "details": "Details",
-      "organize": "Organize",
-      "variants": "Variants",
-      "inventory": "Inventory kits",
-      "attributes": "Attributes",
-      "richText": "Rich Text"
-    },
+        "details": "Details",
+        "organize": "Organize",
+        "variants": "Variants",
+        "inventory": "Inventory kits",
+        "attributes": "Attributes",
+        "richText": "Rich Text"
+      },
       "errors": {
         "variants": "Please select at least one variant.",
         "options": "Please create at least one option.",
@@ -452,7 +452,8 @@
         },
         "productOptions": {
           "label": "Product options",
-          "hint": "Define the options for the product, e.g. color, size, etc."
+          "hint": "Define the options for the product, e.g. color, size, etc.",
+          "maxOptionsReached": "Maximum of 3 product options allowed"
         },
         "defaultOption": "Default option",
         "defaultVariant": "Default variant",
@@ -2292,19 +2293,19 @@
   },
   "dashboard": {
     "domain": "Dashboard",
-    "welcome":"Welcome to Vendor Panel",
-    "pleaseCompleteSteps":"Please complete these steps so you can start selling on the marketplace",
-    "completeInformation":"Complete the store information",
-    "setupLocationsShipping":"Setup Locations & Shipping",
-    "addProductsStartSelling":"Add products and start selling",
-    "manage":"Manage",
-    "setup":"Setup",
-    "add":"Add"
+    "welcome": "Welcome to Vendor Panel",
+    "pleaseCompleteSteps": "Please complete these steps so you can start selling on the marketplace",
+    "completeInformation": "Complete the store information",
+    "setupLocationsShipping": "Setup Locations & Shipping",
+    "addProductsStartSelling": "Add products and start selling",
+    "manage": "Manage",
+    "setup": "Setup",
+    "add": "Add"
   },
   "stripeConnects": {
     "domain": "Stripe Connects"
   },
-  "reviews":{
+  "reviews": {
     "domain": "Reviews",
     "manageYourReviews": " Manage your reviews",
     "showTips": "Your reviews will show up here.",
@@ -2333,28 +2334,28 @@
     "editTheRequestToReport": "Edit the request to report the review from customer.",
     "reportReviewFromCustomer": "Report review from customer.",
     "updateRequest": "Update Request",
-    "replyBeenDeleted":"Reply has been deleted",
-    "replyBeenSend":"Reply has been sent",
-    "pleaseSelectReason":"Please select a reason",
-    "reviewIsReported":"Review is reported",
-    "pleaseWaitModerator":"Please wait for a response from the moderator.",
-    "reasons":"Reason"
+    "replyBeenDeleted": "Reply has been deleted",
+    "replyBeenSend": "Reply has been sent",
+    "pleaseSelectReason": "Please select a reason",
+    "reviewIsReported": "Review is reported",
+    "pleaseWaitModerator": "Please wait for a response from the moderator.",
+    "reasons": "Reason"
   },
   "requests": {
     "domain": "Requests",
-    "checkStatus":"Check the status of your requests and add new ones",
-    "collectionsRequests":"Collections requests",
-    "requestsCollections":"Request Collections",
-    "categoriesRequests":"Categories requests",
-    "requestsCategories":"Request Category",
-    "reviewsRequests":"Reviews requests",
-    "requestsReviews":"Reviews Removal Requests",
-    "ordersRequests":"Orders requests",
-    "requestsOrders":"Orders Cancellation Requests",
-    "addCollection":"Your requests to add a new collection",
-    "addCategories":"Your requests to add a new category",
-    "cancelOrder":"Your requests to cancel an order",
-    "cancelReview":" Your requests to cancel a review",
+    "checkStatus": "Check the status of your requests and add new ones",
+    "collectionsRequests": "Collections requests",
+    "requestsCollections": "Request Collections",
+    "categoriesRequests": "Categories requests",
+    "requestsCategories": "Request Category",
+    "reviewsRequests": "Reviews requests",
+    "requestsReviews": "Reviews Removal Requests",
+    "ordersRequests": "Orders requests",
+    "requestsOrders": "Orders Cancellation Requests",
+    "addCollection": "Your requests to add a new collection",
+    "addCategories": "Your requests to add a new category",
+    "cancelOrder": "Your requests to cancel an order",
+    "cancelReview": " Your requests to cancel a review",
     "title": "Title",
     "handle": "Handle",
     "date": "Date",
