--- a/src/i18n/translations/mk.json
+++ b/src/i18n/translations/mk.json
@@ -407,7 +407,7 @@
     "edit": {
       "header": "Уреди производ",
       "description": "Уредете ги деталите за производот.",
-      "subtitlePlaceholder": 	"По избор, максимум 150 знаци",
+      "subtitlePlaceholder": "По избор, максимум 150 знаци",
       "successToast": "Производ {{title}} беше успешно ажуриран."
     },
     "create": {
@@ -449,7 +449,8 @@
         },
         "productOptions": {
           "label": "Опции за производи",
-          "hint": "Дефинирајте ги опциите за производот, на пр. "
+          "hint": "Дефинирајте ги опциите за производот, на пр. ",
+          "maxOptionsReached": "Можете да додадете максимум 3 опции"
         }
       },
       "successToast": "Производ {{title}} беше успешно создаден."
